--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Flow PodCast</string>
-    <string name="flow_shop_text">Flow Shop</string>
+    <string name="app_name">Driver Learning Videos</string>
+    <string name="webview_text">Saiba mais..</string>
 </resources>
